Tools and resources: version 3.0

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -14,6 +14,8 @@
     --background-secondary-altlight: #304072;
     --foreground-primary: #a8b5c3;
     --purple: #492dd5ec;
+    --accgreen: #07816c;
+    --greylight: #a7afd7;
   }
   #light {
     --lighter: #0a0d14;
@@ -24,6 +26,8 @@
     --background-secondary-altlight: #98b0e8;
     --foreground-primary: #141a29;
     --purple: #492dd5ec;
+    --accgreen: #07816c;
+    --greylight: #a7afd7;
   }
   transition: background-color 2s ease;
 }
