--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -222,6 +222,7 @@ $radius: 10px;
   cursor: url("../../public/assets/files/hand.svg"), pointer;
   z-index: 1;
   margin: 0.5em;
+  margin-top: 1.5em;
   border: currentColor 0.12em solid;
   transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
