--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -203,6 +203,9 @@
       gap: 0.6em;
       margin: 0;
     }
+    .back-buttonbar {
+      width: 10px;
+    }
 
     .button {
       text-decoration: none;
