--- a/src/styles/_overrides.scss
+++ b/src/styles/_overrides.scss
@@ -26,6 +26,9 @@
   height: auto;
   transition: background-color 2s ease;
   min-height: 100vh;
+  .back-buttonbar {
+    margin-left: 4rem;
+  }
 }
 .scblogheader {
   display: flex;
@@ -199,13 +202,13 @@ ol {
 
 .scblog-cards {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
-  gap: 1.5rem;
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  gap: 1rem;
   justify-content: center;
   align-items: stretch;
   padding: 3rem 2rem;
-  width: 90vw;
-  max-width: 1300px;
+  width: 95vw;
+  max-width: 100vw;
   margin-inline: auto;
 }
 
