scaiblog counter add()

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -94,7 +94,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  width: 80vw;
+  width: 100%;
   flex-wrap: wrap;
   gap: 1rem;
 }
