--- a/src/styles/_overrides.scss
+++ b/src/styles/_overrides.scss
@@ -248,7 +248,7 @@ ol {
       padding: 0 0.8em;
     }
     .scblog-title {
-      padding: 0.5em;
+      padding: 0.5em 0 0.5em 0;
       font-size: 19px;
       font-weight: bold;
     }
