--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -431,6 +431,40 @@
   text-decoration: underline;
 }
 
+.fin-page {
+  background-color: var(--background-primary);
+  color: var(--text-primary);
+  padding: 0.5em;
+  min-height: 100vh;
+}
+
+.fin-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 2rem;
+}
+
+.fin-header h1 {
+  font-size: 2.5rem;
+  color: var(--accent);
+  margin-bottom: 1rem;
+  font-weight: bold;
+  font-size: 38px;
+  letter-spacing: 2px;
+}
+
+.fin-hero-graph {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.fin-hero-plot {
+  width: 90%;
+  height: 50vh;
+}
+
 .tools-page {
   display: flex;
   flex-direction: column;
