--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,13 +3,18 @@
 @import "./variables";
 @import "./overrides";
 
+html,
+body {
+  background-color: #000;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
 #root {
+  background-color: red;
   cursor: url("data:image/svg+xml,%3Csvg version='1.1' class='drop' id='normal_cursor' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' width='45px' height='45px' viewBox='0 0 512 512' style='color: blue;' xml:space='preserve'%3E %3Cpath d='M 0 0 L 55 170 A 1 1 0 0 0 168 62 L 0 0' stroke='blue' stroke-width='2px' fill='rgb(204,222,254)' /%3E %3C/svg%3E"),
     pointer;
-  body {
-    overflow: hidden;
-    min-height: 100%;
-  }
   #introduction {
     flex-direction: column;
     height: 100vh;
@@ -304,6 +309,7 @@
       color: #0049f4 !important;
     }
   }
+  background-color: red;
 }
 
 .resources-page {
@@ -456,13 +462,35 @@
 
 .fin-hero-graph {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
 .fin-hero-plot {
-  width: 90%;
+  width: 101%;
   height: 50vh;
+}
+
+.fin-type-dropdown {
+  background-color: transparent;
+  color: inherit;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  border-radius: 4px;
+  padding: 6px 10px;
+  font-size: 0.95rem;
+  outline: none;
+  appearance: none;
+  cursor: pointer;
+}
+
+.fin-type-dropdown:hover {
+  border-color: rgba(255, 255, 255, 0.4);
+}
+
+.fin-type-dropdown option {
+  background-color: #222;
+  color: #fff;
 }
 
 .tools-page {
