Scai: introtxt update

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -55,12 +55,11 @@
   &:hover {
     color: transparent !important;
     // background: url("https://media.giphy.com/media/3bc8pP1rVdfgN1uoMV/giphy.gif");
-    background: url("https://media.giphy.com/media/9JxkPTP3alOykb8PmQ/giphy.gif") !important;
-    // background: url("https://media.giphy.com/media/lKaeQAunM3hZaqsOpj/giphy.gif?cid=ecf05e47xuf9z7vq1a8iarlescw065qcad2bri7zfgzgemzh&ep=v1_gifs_search&rid=giphy.gif&ct=g");
+    // background: url("https://media.giphy.com/media/9JxkPTP3alOykb8PmQ/giphy.gif") !important;
+    background: url("https://media.giphy.com/media/lKaeQAunM3hZaqsOpj/giphy.gif?cid=ecf05e47xuf9z7vq1a8iarlescw065qcad2bri7zfgzgemzh&ep=v1_gifs_search&rid=giphy.gif&ct=g");
     background-size: cover !important;
     background-position: center !important;
     -webkit-background-clip: text !important;
-    padding: 0.5rem 1rem;
   }
 }
 
