--- a/src/styles/_animations.scss
+++ b/src/styles/_animations.scss
@@ -254,12 +254,12 @@
 }
 
 .introtext {
-  margin: 10px 10px;
+  margin: 5px 10px;
   font-size: 18px;
   word-spacing: 2px;
   white-space: pre-wrap;
   text-align: justify;
-  padding: 10px;
+  padding: 5px 12px 5px 12px;
 }
 
 .definitions {
