--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -16,6 +16,7 @@
     --purple: #492dd5ec;
     --accgreen: #07816c;
     --greylight: #a7afd7;
+    --accgreenlight: #66cdc5;
   }
   #light {
     --lighter: #0a0d14;
@@ -28,6 +29,7 @@
     --purple: #492dd5ec;
     --accgreen: #07816c;
     --greylight: #a7afd7;
+    --accgreenlight: #66cdc5;
   }
   transition: background-color 2s ease;
 }
