Fin: Ticker analysis

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -16,7 +16,7 @@
     --purple: #492dd5ec;
     --accgreen: #07816c;
     --greylight: #a7afd7;
-    --accgreenlight: #66cdc5;
+    --accgreenlight: #85daef;
   }
   #light {
     --lighter: #0a0d14;
