UX Capital Game

--- a/src/styles/_games.scss
+++ b/src/styles/_games.scss
@@ -29,7 +29,9 @@
   // background: url("https://media.giphy.com/media/lKaeQAunM3hZaqsOpj/giphy.gif?cid=ecf05e47xuf9z7vq1a8iarlescw065qcad2bri7zfgzgemzh&ep=v1_gifs_search&rid=giphy.gif&ct=g");
   // background: url("https://media.giphy.com/media/3bc8pP1rVdfgN1uoMV/giphy.gif");
   // background: url("https://media.giphy.com/media/Qvp6Z2fidQR34IcwQ5/giphy.gif");
-  background-color: var(--quiz-theme-color-light);
+  background: url("https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExZGFrM2g0cmwyZG45NndhejMxdXFia3E1Y2k2bWc2bjVmdzNmNTJoaSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/V2ggmqUpfii6NpLrtl/giphy.gif");
+  // background: url("https://media.giphy.com/media/v1.Y2lkPWVjZjA1ZTQ3MjliMndybm4wemZxNzJnZWllbDhzeDd5NXRpN3F3cGpxdGx1azA3ciZlcD12MV9naWZzX3NlYXJjaCZjdD1n/l35uQh8PkJjYKH7tNn/giphy.gif");
+  // background-color: var(--quiz-theme-color-light);
 }
 .capital-quiz-welcome::after {
   content: "";
