UX Capital Game

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -83,6 +83,7 @@
       flex-direction: column;
       // transform: skewY(-2deg);
       min-height: 30vh;
+      margin-top: 3rem;
       h1 {
         color: inherit !important;
         font-size: 36px;
