--- a/src/styles/_games.scss
+++ b/src/styles/_games.scss
@@ -29,7 +29,8 @@
   // background: url("https://media.giphy.com/media/lKaeQAunM3hZaqsOpj/giphy.gif?cid=ecf05e47xuf9z7vq1a8iarlescw065qcad2bri7zfgzgemzh&ep=v1_gifs_search&rid=giphy.gif&ct=g");
   // background: url("https://media.giphy.com/media/3bc8pP1rVdfgN1uoMV/giphy.gif");
   // background: url("https://media.giphy.com/media/Qvp6Z2fidQR34IcwQ5/giphy.gif");
-  background: url("https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExZGFrM2g0cmwyZG45NndhejMxdXFia3E1Y2k2bWc2bjVmdzNmNTJoaSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/V2ggmqUpfii6NpLrtl/giphy.gif");
+  // background: url("https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExZGFrM2g0cmwyZG45NndhejMxdXFia3E1Y2k2bWc2bjVmdzNmNTJoaSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/V2ggmqUpfii6NpLrtl/giphy.gif");
+  background: url("https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExNGhtbm14OGdvd3BkYXJ3NnBtN2w5bmx4Z29jeDh5b212MDN4N3RubyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/s1iF2QudmlgXIWMQf4/giphy.gif");
   // background: url("https://media.giphy.com/media/v1.Y2lkPWVjZjA1ZTQ3MjliMndybm4wemZxNzJnZWllbDhzeDd5NXRpN3F3cGpxdGx1azA3ciZlcD12MV9naWZzX3NlYXJjaCZjdD1n/l35uQh8PkJjYKH7tNn/giphy.gif");
   // background-color: var(--quiz-theme-color-light);
 }
@@ -84,10 +85,14 @@
 
 .quiz-settings label {
   display: flex;
-  align-items: center; /* ✅ aligns vertically center */
+  align-items: center;
   font-weight: 600;
   justify-content: space-between;
-  gap: 0.5rem; /* ✅ space between text & select */
+  gap: 1.2rem;
+}
+
+.quiz-settings select {
+  min-width: 180px;
 }
 
 .capital-quiz-welcome button {
